Fix whitespace under footer

--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -1,5 +1,6 @@
 .footerBgContainer {
     width: 100%;
+    height: 100px;
     position:absolute; 
     bottom:0;
     z-index: -1;
